Fix Pipeline
Removes IOException that is never thrown.
Changes List into ImmutableList.